// PATH="$PATH:$(go env GOPATH)/bin"
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative auths.proto

syntax = "proto3";

package auths;

option go_package = "/auths";

message Auth {
    string name = 1;
    string email = 2;
    string password = 3;
}

message AuthRequest {
    Auth authEntry = 1;
}

message AuthResponse {
    string result = 1;
}

service AuthService {
    rpc Authenticate(AuthRequest) returns (AuthResponse);
}